--- a/package.json
+++ b/package.json
@@ -139,9 +139,9 @@
         {
           "libraryName": "antd-mobile",
           "style": "css"
-        },
-        "transform-decorators-legacy"
-      ]
+        }
+      ],
+      [ "@babel/plugin-proposal-decorators", { "legacy": true }]
     ]
   },
   "devDependencies": {
