--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "@typescript-eslint/eslint-plugin": "1.6.0",
     "@typescript-eslint/parser": "1.6.0",
     "antd-mobile": "^2.2.14-beta.0",
+    "axios": "^0.19.0",
     "babel-eslint": "10.0.1",
     "babel-jest": "^24.8.0",
     "babel-loader": "8.0.5",
     "babel-plugin-named-asset-import": "^0.3.2",
     "babel-preset-react-app": "^9.0.0",
+    "body-parser": "^1.19.0",
     "camelcase": "^5.2.0",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
+    "cookie-parser": "^1.4.4",
     "css-loader": "2.1.1",
     "dotenv": "6.2.0",
     "dotenv-expand": "4.2.0",
@@ -60,6 +63,7 @@
     "terser-webpack-plugin": "1.2.3",
     "ts-pnp": "1.1.2",
     "url-loader": "1.1.2",
+    "utility": "^1.16.1",
     "webpack": "4.29.6",
     "webpack-dev-server": "3.2.1",
     "webpack-manifest-plugin": "2.0.4",
@@ -68,7 +72,10 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js"
+    "test": "node scripts/test.js",
+    "server": "nodemon server/server.js",
+    "mongod": "mongod",
+    "mongo": "mongo"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -153,5 +160,6 @@
   "devDependencies": {
     "babel-plugin-import": "^1.12.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.5"
-  }
+  },
+  "proxy": "http://localhost:3000"
 }
